<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FeedbackActivity">

    <!--<include-->
        <!--layout="@layout/toolbar_main"/>-->

    <ImageView android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_horizont"
        android:contentDescription="@string/LogoCompany"/>

    <TextView
    android:id="@+id/textViewSite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:autoLink="web"
    android:linksClickable="true"
    android:text="@string/company_site" />

    <TextView
        android:id="@+id/textViewCompanyAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/company_address" />

    <TextView
        android:id="@+id/textViewCompanyPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:autoLink="phone"
        android:linksClickable="true"
        android:text="@string/company_phone" />

    <TextView
        android:id="@+id/textViewCompanyContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:text="@string/company_contacts" />


    <TextView
        android:id="@+id/textViewCompanyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/company_email" />

</RelativeLayout>
