<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rainbow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.targetone.RainbowActivity">

    <SeekBar
        android:id="@+id/mySeekingBar_R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:progress="0"
        android:layout_marginTop="27dp"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/mySeekingBar_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:progress="0"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/mySeekingBar_W"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/mySeekingBar_G"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:progress="0"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/mySeekingBar_B"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/mySeekingBar_W"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:progress="0"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/mySeekingBar_R"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/WhiteLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/mySeekingBar_R"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:text="@string/GreenLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/mySeekingBar_B"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="@string/RedLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/BlueLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/mySeekingBar_W"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>
